# i3wm-config-haskell

./: README.md  i3config.cabal  stack.yaml  todo.org
app/: Action.hs  DSL.hs  Hoistable.hs  Key.hs  Main.hs  Serializable.hs
app/DataTypes/: Action.hs  Key.hs  Other.hs
app/Languages/: I3.hs  I4.hs
